--- a/index.html
+++ b/index.html
@@ -12,28 +12,15 @@
 
   <h1>Doo Doo</h1>
 
-  <ul id="items">
-   <li><a href="javascript:;">Item 1</a></li>
-   <li><a href="javascript:;">Item 2</a></li>
-   <li><a href="javascript:;">Item 3</a></li>
-   <li><a href="javascript:;">Item 4</a></li>
-   <li><a href="javascript:;">Item 5</a></li>
-   <li><a href="javascript:;">Item 6</a></li>
-   <li><a href="javascript:;">Item 7</a></li>
-   <li><a href="javascript:;">Item 8</a></li>
-   <li><a href="javascript:;">Item 9</a></li>
-   <li><a href="javascript:;">Item 10</a></li>
-   <li><a href="javascript:;">Item 11</a></li>
-   <li><a href="javascript:;">Item 12</a></li>
-   <li><a href="javascript:;">Item 13</a></li>
-   <li><a href="javascript:;">Item 14</a></li>
-   <li><a href="javascript:;">Item 15</a></li>
-   <li><a href="javascript:;">Item 16</a></li>
-   <li><a href="javascript:;">Item 17</a></li>
-   <li><a href="javascript:;">Item 18</a></li>
-   <li><a href="javascript:;">Item 19</a></li>
-   <li><a href="javascript:;">Item 20</a></li>
-  </ul>
+  <form>
+
+    <input type="text" id="input" value="Add some shit">
+    <button>Submit</button>
+
+    <ul id="items">
+    </ul>
+
+  </form>
 
 </div>
 
