Cleaned up functions, added validation and cleaned up styles for desktop and mobile.

--- a/index.html
+++ b/index.html
@@ -2,28 +2,34 @@
 <html>
 <head>
  <title>Doo Doo | A todo list that is simple as shit.</title>
- <link rel="stylesheet" type="text/css" href="assets/css/main.css">
- <script type="text/javascript" src="assets/js/jquery-3.2.0.slim.min.js"></script>
+
+ <link rel="stylesheet" type="text/css" href="assets/css/app.css">
+
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+
+<!--  <script type="text/javascript" src="assets/js/jquery-3.2.0.slim.min.js"></script>
+ -->
+
+   <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
+ <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
  <script type="text/javascript" src="assets/js/app.js"></script>
+
+  <script src="https://use.typekit.net/wsq6jmj.js"></script>
+  <script>try{Typekit.load({ async: true });}catch(e){}</script>
+
 </head>
 <body>
 
 <div id="app">
 
   <h1>Doo Doo</h1>
-
   <form>
-
-    <input type="text" id="input" value="Add some shit">
-    <button>Submit</button>
-
+    <input type="text" id="input" placeholder="Add some shit...">
     <ul id="items">
     </ul>
-
   </form>
 
 </div>
-
 
  <footer>
   <p>A <a href="http://dereksmoore.com">Derek S. Moore</a> joint.</p>
