Add local storage and simple write test!

--- a/index.html
+++ b/index.html
@@ -44,5 +44,10 @@
   <p>A <a href="http://dereksmoore.com" target="_blank">Derek S. Moore</a> joint.</p>
  </footer>
 
+    <script>
+      startup ();
+    </script>
+
+
 </body>
 </html>
