--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
  <link rel="stylesheet" type="text/css" href="assets/css/app.css">
 
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+  <meta name="apple-mobile-web-app-capable" content="yes">
 
  <script type="text/javascript" src="assets/js/jquery-1.12.4.min.js"></script>
  <script type="text/javascript" src="assets/js/jquery-ui.min.js"></script>
