--- a/write.html
+++ b/write.html
@@ -1,6 +1,10 @@
 <html>
   <head>
     <title>Write.</title>
+
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+    <meta name="apple-mobile-web-app-capable" content="yes">
+
     <link href="https://fonts.googleapis.com/css?family=Inconsolata" rel="stylesheet">
     <script>
       function savetext () {
