--- a/write.html
+++ b/write.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title>Write.</title>
+    <title>Write...</title>
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <meta name="apple-mobile-web-app-capable" content="yes">
@@ -30,23 +30,32 @@
           left: 0;
           bottom: 0;
           border: none;
+          outline: none;
+          width: 100%;
+
           font-size: 18px;
           line-height: 28px;
-          outline: none;
 
-          padding: 10% 20%;
+          padding: 10%;
 
-          color: #6868da;
-          text-shadow: 0px 0px 0px #000;
-          -webkit-text-fill-color: transparent;
           font-family: 'Inconsolata', monospace;
         }
+
+        ::selection {
+          background: #6868da;
+          color: #fff;
+        }
+        ::-moz-selection {
+          background: #6868da;
+          color: #fff;
+        }
+
       </style>
 
     </head>
   <body>
 
-    <textarea id="text"></textarea>
+    <textarea id="text" autofocus placeholder="Go ahead, write something..."></textarea>
     <script>
       run ();
     </script>
