--- a/write.html
+++ b/write.html
@@ -32,6 +32,8 @@
           border: none;
           outline: none;
 
+          width: 100%;
+
           font-size: 18px;
           line-height: 28px;
 
