--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 
  <script type="text/javascript" src="assets/js/jquery-1.12.4.min.js"></script>
  <script type="text/javascript" src="assets/js/jquery-ui.min.js"></script>
+ <script type="text/javascript" src="assets/js/jquery.ui.touch-punch.min.js"></script>
  <script type="text/javascript" src="assets/js/alertify.min.js"></script>
  <script type="text/javascript" src="assets/js/app.js"></script>
 
