Added a reset function

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
   </ul>
   </nav>
 
-  <form data-persist="garlic">
+  <form>
     <input type="text" id="input" placeholder="Type then hit enter...">
     <ul id="items">
     </ul>
@@ -43,7 +43,7 @@
 </div>
 
  <footer>
-  <p>A <a href="http://dereksmoore.com" target="_blank">Derek S. Moore</a> joint.</p>
+  <p><a href="javascript:;" class="reset">&#10226;</a>  A <a href="http://dereksmoore.com" target="_blank">Derek S. Moore</a> joint.</p>
  </footer>
 
     <script>
