Add color to local storage

--- a/index.html
+++ b/index.html
@@ -19,10 +19,11 @@
 
 </head>
 <body>
-
+<div id="all">
 <div id="app" class="black">
 
   <h1>DooDoo.io</h1>
+
 
   <nav class="colors">
   <ul>
@@ -40,7 +41,8 @@
     </ul>
   </form>
 
-</div>
+</div><!-- end app -->
+</div><!-- end items -->
 
  <footer>
   <p><a href="javascript:;" class="reset">&#10226;</a>  A <a href="http://dereksmoore.com" target="_blank">Derek S. Moore</a> joint.</p>
