Nice base setup

--- a/write.html
+++ b/write.html
@@ -1,11 +1,25 @@
 <html>
   <head>
-    <title>Write.</title>
+    <title>DooDoo.io | write</title>
 
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-    <meta name="apple-mobile-web-app-capable" content="yes">
+    <link rel="apple-touch-icon" sizes="180x180" href="assets/favicons/apple-touch-icon.png">
+    <link rel="icon" type="image/png" href="assets/favicons/favicon-32x32.png" sizes="32x32">
+    <link rel="icon" type="image/png" href="assets/favicons/favicon-16x16.png" sizes="16x16">
+    <link rel="manifest" href="assets/favicons/manifest.json">
+    <link rel="mask-icon" href="assets/favicons/safari-pinned-tab.svg" color="#6868da">
+    <meta name="theme-color" content="#6868da">
 
-    <link href="https://fonts.googleapis.com/css?family=Inconsolata" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="assets/css/app.css">
+
+   <script type="text/javascript" src="assets/js/jquery-1.12.4.min.js"></script>
+   <script type="text/javascript" src="assets/js/jquery-ui.min.js"></script>
+   <script type="text/javascript" src="assets/js/jquery.ui.touch-punch.min.js"></script>
+   <script type="text/javascript" src="assets/js/alertify.min.js"></script>
+   <script type="text/javascript" src="assets/js/app.js"></script>
+
+    <script src="https://use.typekit.net/wsq6jmj.js"></script>
+    <script>try{Typekit.load({ async: true });}catch(e){}</script>
+
     <script>
       function savetext () {
         var s = document.getElementById ("text").value;
@@ -39,16 +53,14 @@
 
           padding: 10%;
 
-          background-color: #fffdf7;
-          color: #6868da;
-          -webkit-text-fill-color: #333;
-          font-family: 'Inconsolata', monospace;
+          color: #000;
+          font-family: "filson-pro",sans-serif;
+          font-weight: 300;
         }
 
         ::selection {
           background: #6868da;
           color: #fff;
-          -webkit-text-fill-color: #fff;
         }
         ::-moz-selection {
           background: #6868da;
