--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
       <a href="javascript:;" class="black active">&bull;</a>
       <a href="javascript:;" class="purple">&bull;</a>
       <a href="javascript:;" class="red">&bull;</a>
+      <a href="javascript:;" class="rainbow">Rainbow</a>
     </li>
   </ul>
   </nav>
@@ -50,18 +51,12 @@
 </div><!-- end items -->
 
  <footer>
-  <p>
-    <a href="#">Home</a>
-    <a href="#">About</a>
-    <a href="#">Contact</a>
-  </p>
   <a href="javascript:;" class="clear">Clear</a>
  </footer>
 
     <script>
       startup ();
     </script>
-
 
 </body>
 </html>
