Completed items clear and resort to bottom.

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 </div><!-- end items -->
 
  <footer>
-  <a href="javascript:;" class="clear">Clear</a>
+  <a href="javascript:;" title="Clear completed items." class="clear">Clear</a>
  </footer>
 
     <script>
