--- a/index.html
+++ b/index.html
@@ -29,17 +29,6 @@
 <div id="all">
 <div id="app" class="black">
 
-  <h1>DooDoo.io</h1>
-  <nav class="colors">
-  <ul>
-    <li>
-      <a href="javascript:;" class="black active">&bull;</a>
-      <a href="javascript:;" class="purple">&bull;</a>
-      <a href="javascript:;" class="red">&bull;</a>
-    </li>
-  </ul>
-  </nav>
-
   <form>
     <input type="text" id="input" placeholder="Type then hit enter...">
     <ul id="items">
@@ -50,6 +39,8 @@
 </div><!-- end items -->
 
  <footer>
+<!--   <a href="javascript:;" title="Clear completed items." class="edit">Edit</a>
+ -->
   <a href="javascript:;" title="Clear completed items." class="clear">Clear</a>
  </footer>
 
