--- a/index.html
+++ b/index.html
@@ -14,20 +14,10 @@
 
   <link rel="stylesheet" type="text/css" href="assets/css/app.css">
 
- <script type="text/javascript" src="assets/js/jquery-1.12.4.min.js"></script>
- <script type="text/javascript" src="assets/js/jquery-ui.min.js"></script>
- <script type="text/javascript" src="assets/js/jquery.ui.touch-punch.min.js"></script>
- <script type="text/javascript" src="assets/js/alertify.min.js"></script>
- <script type="text/javascript" src="assets/js/app.js"></script>
-
-  <script src="https://use.typekit.net/wsq6jmj.js"></script>
-  <script>try{Typekit.load({ async: true });}catch(e){}</script>
-
 </head>
 <body>
 
-<div id="all">
-<div id="app" class="black">
+<div id="app" class="purple">
 
   <form>
     <input type="text" id="input" placeholder="Type then hit enter...">
@@ -35,16 +25,23 @@
     </ul>
   </form>
 
-</div><!-- end app -->
-</div><!-- end items -->
+</div>
+<!-- end app -->
 
- <footer>
-  <a href="javascript:;" title="Clear completed items." class="clear">Clear</a>
- </footer>
+<div id="ptr">
+   <p>Pull down to clear!</p>
+</div>
 
-    <script>
-      startup ();
-    </script>
+<div id="clear"></div>
+
+ <script src="assets/js/pack.js"></script>
+ <script src="assets/js/wptr.1.1.js"></script>
+ <script type="text/javascript" src="assets/js/app.js"></script>
+
+<script>
+  startup ();
+</script>
+
 
 </body>
 </html>
