--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
- <title>DooDoo.io</title>
+ <title>DooDoo.io | Bleep, Bloop, Done</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
   <meta name="apple-mobile-web-app-capable" content="yes">
 
@@ -12,36 +12,23 @@
   <link rel="mask-icon" href="assets/favicons/safari-pinned-tab.svg" color="#6868da">
   <meta name="theme-color" content="#6868da">
 
-  <link rel="stylesheet" type="text/css" href="assets/css/app.css">
+ <link rel="stylesheet" type="text/css" href="assets/css/app.css">
 
 </head>
 <body>
 
-<div id="app" class="purple">
+  <div id="app" class="purple">
+    <form>
+      <input type="text" id="input" placeholder="Add something...">
+      <ul id="items">
+      </ul>
+    </form>
+  </div>
 
-  <form>
-    <input type="text" id="input" placeholder="Type then hit enter...">
-    <ul id="items">
-    </ul>
-  </form>
+<a href="javascript:;" class="clear">DooDoo</a>
 
-</div>
-<!-- end app -->
-
-<div id="ptr">
-   <p>Pull down to clear!</p>
-</div>
-
-<div id="clear"></div>
-
- <script src="assets/js/pack.js"></script>
- <script src="assets/js/wptr.1.1.js"></script>
- <script type="text/javascript" src="assets/js/app.js"></script>
-
-<script>
-  startup ();
-</script>
-
+<script src="assets/js/pack.js"></script>
+<script type="text/javascript" src="assets/js/app.js"></script>
 
 </body>
 </html>
