--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     <form>
       <input type="text" id="input" placeholder="Add something...">
       <ul id="items">
+        <li><a href="javascript:;" class="item"><span contenteditable="true" class="edit">Test item</span></a></li>
       </ul>
     </form>
   </div>
