Double tap is back, baby!

--- a/index.html
+++ b/index.html
@@ -19,10 +19,8 @@
 
   <div id="app" class="purple">
     <form>
-      <input type="text" id="input" placeholder="Add something...">
-      <ul id="items">
-        <li><a href="javascript:;" class="item"><span contenteditable="true" class="edit">Test item</span></a></li>
-      </ul>
+      <input type="text" id="create" placeholder="Add something...">
+      <ul id="items"></ul>
     </form>
   </div>
 
