That's some hot stuff!

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
   <div id="app" class="purple">
     <form>
-      <input type="text" id="create" placeholder="Add something...">
+      <input type="text" id="create" placeholder="Go ahead, add something...">
       <ul id="items"></ul>
     </form>
   </div>
