--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
   <link rel="mask-icon" href="assets/favicons/safari-pinned-tab.svg" color="#6868da">
   <meta name="theme-color" content="#6868da">
 
+  <link rel="apple-touch-startup-image" href="assets/images/splash-doodoo.png">
+
  <link rel="stylesheet" type="text/css" href="assets/css/app.css">
 
 </head>
