Testing sounds on mobile!

--- a/index.html
+++ b/index.html
@@ -21,15 +21,16 @@
 
   <div id="app" class="purple">
     <form>
-      <input type="text" id="create" placeholder="Go ahead, add something...">
       <ul id="items"></ul>
+      <input type="text" id="create" placeholder="&#10010;" autofocus>
     </form>
   </div>
 
-<a href="javascript:;" class="clear">DooDoo</a>
+<button class="hide clear loud-link-click" data-sound="bleep">Done!</button>
 
 <script src="assets/js/pack.js"></script>
 <script type="text/javascript" src="assets/js/app.js"></script>
+<script src="assets/js/sounds.js"></script>
 
 </body>
 </html>
