Better sound support!

--- a/index.html
+++ b/index.html
@@ -26,11 +26,10 @@
     </form>
   </div>
 
-<button class="hide clear loud-link-click" data-sound="bleep">Done!</button>
+<button class="hide clear">Done!</button>
 
 <script src="assets/js/pack.js"></script>
 <script type="text/javascript" src="assets/js/app.js"></script>
-<script src="assets/js/sounds.js"></script>
 
 </body>
 </html>
