--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <body>
 
   <div id="app" class="purple">
-    <form>
+    <form autocomplete="off">
       <ul id="items"></ul>
       <input type="text" id="create" placeholder="&#10010;" autofocus>
     </form>
