--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <div id="app" class="purple">
     <form autocomplete="off">
       <ul id="items"></ul>
-      <input type="text" id="create" autofocus>
+      <input type="text" id="create" placeholder="Add something..." autofocus>
     </form>
   </div>
 
