--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
- <title>DooDoo.io | Bleep, Bloop, Done</title>
+ <title>DooDoo.io</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
   <meta name="apple-mobile-web-app-capable" content="yes">
 
@@ -22,11 +22,11 @@
   <div id="app" class="purple">
     <form autocomplete="off">
       <ul id="items"></ul>
-      <input type="text" id="create" placeholder="Add something..." autofocus>
+      <input type="search" id="create" placeholder="Add something..." autofocus>
     </form>
   </div>
 
-<button class="hide clear">Done!</button>
+<button class="hide clear">Clear!</button>
 
 <script src="assets/js/pack.js"></script>
 <script type="text/javascript" src="assets/js/app.js"></script>
