--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 </head>
 <body>
 
-  <div id="app" class="purple">
+  <div id="app">
     <form autocomplete="off">
       <ul id="items"></ul>
       <input type="text" id="create" placeholder="Add something..." autofocus>
