--- a/index.html
+++ b/index.html
@@ -2,17 +2,19 @@
 <html>
 <head>
  <title>DooDoo.io</title>
+  <meta content='text/html; charset=utf-8' http-equiv='content-type'>
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
   <meta name="apple-mobile-web-app-capable" content="yes">
 
   <link rel="apple-touch-icon" sizes="180x180" href="assets/favicons/apple-touch-icon.png">
-  <link rel="icon" type="image/png" href="assets/favicons/favicon-32x32.png" sizes="32x32">
-  <link rel="icon" type="image/png" href="assets/favicons/favicon-16x16.png" sizes="16x16">
-  <link rel="manifest" href="assets/favicons/manifest.json">
+  <link rel="icon" type="image/png" sizes="32x32" href="assets/favicons/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="assets/favicons/favicon-16x16.png">
+  <link rel="manifest" href="assets/favicons/site.webmanifest">
   <link rel="mask-icon" href="assets/favicons/safari-pinned-tab.svg" color="#6868da">
-  <meta name="theme-color" content="#6868da">
-
-  <link rel="apple-touch-startup-image" href="assets/images/splash-doodoo.png">
+  <meta name="apple-mobile-web-app-title" content="DooDoo">
+  <meta name="application-name" content="DooDoo">
+  <meta name="msapplication-TileColor" content="#ffffff">
+  <meta name="theme-color" content="#ffffff">
 
  <link rel="stylesheet" type="text/css" href="assets/css/app.css">
 
@@ -20,13 +22,15 @@
 <body>
 
   <div id="app">
+
+    <button class="hide clear">🎉Done!   🎉</button>
+
     <form autocomplete="off">
       <ul id="items"></ul>
       <input type="text" id="create" placeholder="Add something..." autofocus>
     </form>
   </div>
 
-<button class="hide clear">Clear!</button>
 
 <script src="assets/js/pack.js"></script>
 <script type="text/javascript" src="assets/js/app.js"></script>
