Lots and lots of tightening

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html manifest="doodoo.manifest">
 <head>
  <title>DooDoo.io</title>
   <meta content='text/html; charset=utf-8' http-equiv='content-type'>
@@ -23,7 +23,7 @@
 
   <div id="app">
 
-    <button class="hide clear">🎉Done!   🎉</button>
+    <button class="hide clear">Done!</button>
 
     <form autocomplete="off">
       <ul id="items"></ul>
