Prototyping new header

--- a/index.html
+++ b/index.html
@@ -23,7 +23,12 @@
 
   <div id="app">
 
-    <button class="hide clear">Done!</button>
+    <header>
+      <a href="#" class="logo">DooDoo</a>
+      <button class="hide clear">Done!</button>
+    </header>
+
+
 
     <form autocomplete="off">
       <ul id="items"></ul>
