More UI prototyping

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
     <header>
       <a href="#" class="logo">DooDoo</a>
-      <button class="hide clear">Done!</button>
+      <button class="hide clear">💎</button>
     </header>
 
 
