A way better clear button!

--- a/index.html
+++ b/index.html
@@ -22,14 +22,7 @@
 <body>
 
   <div id="app">
-
-    <header>
-      <a href="#" class="logo">DooDoo</a>
-      <button class="hide clear">💎</button>
-    </header>
-
-
-
+    <button class="hide clear">🎉</button>
     <form autocomplete="off">
       <ul id="items"></ul>
       <input type="text" id="create" placeholder="Add something..." autofocus>
